# gradio-modal-gcp-speech-ui

./: .env.example  .gitignore  DEVELOPMENT.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.sh  test_simple.py
config/: gcp_config.py  settings.py
samples/: README.md
scripts/: test_audio.py
src/: __init__.py  app.py
src/gcp_client/: __init__.py  audio_processor.py  exceptions.py  speech_client.py
src/gradio_app/: __init__.py  interface.py
src/modal_functions/: __init__.py
src/utils/: __init__.py
tests/: conftest.py  test_audio_analysis.py  test_edge_cases.py  test_setup.py
