# PyProject.toml - Modern Python Project Configuration
# Gradio Modal GCP Speech UI

[project]
name = "gradio-modal-gcp-speech-ui"
version = "0.1.0"
description = "Gradio-powered Speech-to-Text UI with Google Cloud STT and Modal deployment"
authors = [
    {name = "Manoj T", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["gradio", "modal", "speech-to-text", "google-cloud", "asr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "gradio>=4.0.0",
    "modal>=0.60.0",
    "google-cloud-speech>=2.0.0",
    "google-cloud-storage>=2.0.0",
    "google-auth>=2.0.0",
    "pydub>=0.25.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "mutagen>=1.47.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "structlog>=23.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
huggingface = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "datasets>=2.14.0",
]

# TODO: Add project URLs and build system configuration
# TODO: Add code formatting tools configuration (Black, isort)
# TODO: Add type checking and testing configuration (mypy, pytest)
